[package]
name = "scheduling-malleable-tasks"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
svg = "0.18.0"
rand = "0.9.0"
itertools = "0.14.0"
open = "5.3.2"
good_lp = "1.13.0"
cpm-rs = "0.1.6"
log = "0.4.27"
env_logger = "0.11.8"
